--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,6 +82,34 @@ jobs:
           echo "Code review placeholder"
           echo "Future implementation: AI-powered review for architecture, security, and best practices"
 
+  scan: 
+    if: github.event.pull_request.draft == false
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Build Docker image
+        run: |
+          docker build -t my-app:${{ github.sha }} .
+
+      - name: Run Trivy scan
+        id: trivy
+        run: |
+          mkdir -p reports
+          trivy image --exit-code 0 --severity HIGH,CRITICAL --format json \
+            -o reports/trivy.json my-app:${{ github.sha }}
+
+          # Convert JSON to Markdown
+          echo "# 🧪 Trivy Vulnerability Report" > reports/trivy-report.md
+          jq -r '.Results[]?.Vulnerabilities[]? |
+            "| \(.VulnerabilityID) | \(.PkgName) | \(.InstalledVersion) | \(.Severity) | \(.Title) |"' \
+            reports/trivy.json >> reports/trivy-report.md
+
+          if ! grep -q "CVE" reports/trivy-report.md; then
+            echo "No vulnerabilities found" >> reports/trivy-report.md
+          fi
+
   security:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
