--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,6 +89,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Docker login
+        uses: docker/login-action@v2
+        env:
+          DOCKER_USERNAME: ${{ vars.DOCKER_USERNAME }}
+        if: "${{ env.DOCKER_USERNAME != '' }}"
+        with:
+          registry: ${{ vars.docker_registry }}
+          username: ${{ vars.docker_username }}
+          password: ${{ secrets.docker_password }}
+
       - name: Extract branch name
         id: extract_branch
         run: |
