--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,7 +97,7 @@ jobs:
         with:
           registry: ${{ vars.docker_registry }}
           username: ${{ vars.docker_username }}
-          password: ${{ secrets.docker_password }}
+          password: ${{ secrets.TRIVY_SCAN_TOKEN }}
 
       - name: Extract branch name
         id: extract_branch
@@ -105,6 +105,7 @@ jobs:
           BRANCH_NAME=$(echo ${{ github.event.pull_request.head.ref }} | sed -e 's/^refs\/heads\///g')
           BRANCH_HASH=$(sha1sum < <(printf '%s' $BRANCH_NAME) | cut -c -15)
           echo "branch_hash=$(echo $BRANCH_HASH)" >> $GITHUB_OUTPUT
+
 
       - name: Run Trivy scan
         id: trivy
