--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "author": "jalantechnologies",
   "license": "MIT",
   "dependencies": {
+    "@babel/traverse": "^7.28.5",
     "@datadog/browser-logs": "^6.6.4",
     "@datadog/browser-rum": "^6.6.4",
     "@datadog/browser-rum-react": "^6.6.4",
@@ -46,10 +47,12 @@
     "cors": "^2.8.5",
     "cpx": "^1.5.0",
     "eslint-config-prettier": "^9.1.0",
+    "forever": "^4.0.3",
     "formik": "^2.4.5",
     "google-libphonenumber": "^3.2.38",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.8.1",
+    "minimatch": "^10.1.1",
     "path": "^0.12.7",
     "postcss": "^8.4.35",
     "postcss-loader": "^8.1.1",
@@ -63,7 +66,8 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
     "@types/config": "0.0.41",
     "@types/google-libphonenumber": "^7.4.30",
     "@types/lodash": "^4.14.186",
@@ -71,7 +75,6 @@
     "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
-    "babel-preset-es2015": "^6.24.1",
     "concurrently": "^7.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
@@ -100,8 +103,12 @@
     "typescript": "^4.4.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1",
+    "webpack-dev-server": "^5.2.2",
     "webpack-merge": "^5.8.0"
+  },
+  "overrides": {
+    "braces": "3.0.3",
+    "minimist": "^1.2.8",
+    "nconf": "0.11.4"
   }
 }
-
