--- a/lib/kube/production/deployment.yaml
+++ b/lib/kube/production/deployment.yaml
@@ -60,8 +60,10 @@ spec:
                 - ALL
           resources:
             requests:
+              cpu: 250m
               memory: '400Mi'
             limits:
+              cpu: 500m
               memory: '800Mi'
           ports:
             - containerPort: 8080
