--- a/lib/kube/production/deployment.yaml
+++ b/lib/kube/production/deployment.yaml
@@ -17,6 +17,7 @@ spec:
     metadata:
       labels:
         app: $KUBE_APP
+        component: $KUBE_NS
     spec:
       automountServiceAccountToken: false
       # Security: Run all containers as non-root user 10001 to prevent privilege escalation
@@ -41,7 +42,7 @@ spec:
         - name: regcred
       containers:
         - name: $KUBE_APP
-          image: $KUBE_DEPLOYMENT_IMAGE
+          image: $KUBE_DEPLOYMENT_IMAGE:$KUBE_DEPLOYMENT_TAG@$KUBE_DEPLOYMENT_DIGEST
           imagePullPolicy: Always
           # Security: Block privilege escalation, make filesystem read-only, drop all capabilities
           securityContext:
@@ -63,9 +64,6 @@ spec:
           env:
             - name: WEB_APP_HOST
               value: $KUBE_INGRESS_HOSTNAME
-          envFrom:
-            - secretRef:
-                name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
             # Security: Use temporary volumes for writable directories since root filesystem is read-only
             - name: tmp
@@ -74,6 +72,8 @@ spec:
               mountPath: /opt/app/logs
             - name: system-tmp
               mountPath: /tmp
+            - name: secret-ref
+              mountPath: /opt/app/secrets
           startupProbe:
             httpGet:
               path: /
@@ -97,3 +97,7 @@ spec:
           emptyDir: {}
         - name: system-tmp
           emptyDir: {}
+        - name: secret-ref
+          secret:
+            secretName: $DOPPLER_MANAGED_SECRET_NAME
+
