--- a/lib/kube/shared/cronjob.yaml
+++ b/lib/kube/shared/cronjob.yaml
@@ -32,7 +32,7 @@ spec:
             - name: regcred
           containers:
             - name: $KUBE_APP
-              image: $KUBE_DEPLOYMENT_IMAGE
+              image: $KUBE_DEPLOYMENT_IMAGE:$KUBE_DEPLOYMENT_TAG@$KUBE_DEPLOYMENT_DIGEST
               imagePullPolicy: Always
               # Security: Block privilege escalation, make filesystem read-only, drop all capabilities
               securityContext:
@@ -42,7 +42,6 @@ spec:
                 capabilities:
                   drop:
                     - ALL
-              command: [ "npm", "run", "script", "--file=my_worker_script" ]
               resources:
                 limits:
                   cpu: 500m
@@ -53,15 +52,25 @@ spec:
               env:
                 - name: WEB_APP_HOST
                   value: $KUBE_INGRESS_HOSTNAME
-              envFrom:
-                - secretRef:
-                    name: $DOPPLER_MANAGED_SECRET_NAME
               volumeMounts:
                 # Security: Use temporary volume for writable directory since root filesystem is read-only
                 - name: tmp
                   mountPath: /opt/app/tmp
+                - name: secret-ref
+                  mountPath: /opt/app/secrets
+              securityContext:
+                allowPrivilegeEscalation: false
+                readOnlyRootFilesystem: true
+                runAsNonRoot: true
+                capabilities:
+                  drop:
+                    - ALL
           volumes:
             - name: tmp
               emptyDir: {}
+            - name: secret-ref
+              secret:
+                secretName: $DOPPLER_MANAGED_SECRET_NAME
           restartPolicy: OnFailure
+
 
