fix: resolve Trivy security vulnerabilities
- Fix CVE-2026-22029: Update @remix-run/router to 1.23.2
- Fix CVE-2025-69223: Update aiohttp to >=3.13.3
- Fix CVE-2026-21441: Update urllib3 to >=2.6.3
- Fix GHSA-58pv-8j8x-9vj2: Install jaraco.context >=6.1.0 and remove vulnerable vendored copy

--- a/Pipfile
+++ b/Pipfile
@@ -22,8 +22,9 @@ twilio = "==9.2.4"
 waitress = "==3.0.1"
 datadog-api-client = "==2.31.0"
 temporalio = ">=1.10.0"
+aiohttp = ">=3.13.3"
 protobuf = "==5.29.5"
-urllib3 = ">=2.6.0"
+urllib3 = ">=2.6.3"
 
 [dev-packages]
 black = "==24.8.0"
