--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
   "overrides": {
     "braces": "3.0.3",
     "minimist": "^1.2.8",
-    "nconf": "0.11.4"
+    "nconf": "0.11.4",
+    "@remix-run/router": "1.23.2"
   }
 }
